projectSheet margin fixed on mobile - aquamar

--- a/next/src/styles/pages/projetos/aquamar.module.scss
+++ b/next/src/styles/pages/projetos/aquamar.module.scss
@@ -141,4 +141,11 @@
 			text-align: justify;
 		 }
 	}
+
+	.projectSheetContent {
+
+		>div:first-child > div {
+			margin-bottom: 1rem;
+		}
+	}
 }
